--- a/styles/home.scss
+++ b/styles/home.scss
@@ -14,7 +14,7 @@ nav {
   height: 40px;
   padding: 8px;
   border-bottom: 1px solid black;
-  background-color: #2a4d71;
+  background-color: $theme;
 }
 nav h1 {
   margin: 0;
@@ -47,7 +47,7 @@ nav h1 {
 footer {
   height: 41px;
   border-top: 1px solid black;
-  background-color: #2a4d71;
+  background-color: $theme;
   display: flex; align-items: center;
 }
 footer input {
