--- a/client/styles/home.scss
+++ b/client/styles/home.scss
@@ -15,6 +15,13 @@ nav {
   padding: 8px;
   border-bottom: 1px solid black;
   background-color: $theme;
+
+  #userCount {
+    float: right;
+    font-size: 20px;
+    margin-top: -25px;
+    display: block;
+  }
 }
 nav h1 {
   margin: 0;
@@ -27,7 +34,8 @@ nav h1 {
   padding: 4px 0;
   display: flex;
 }
-#message-list .message .username,#message-list .message .content {
+#message-list .message .username,
+#message-list .message .content {
   display: inline-block;
   padding: 4px 0;
 }
