various styling improvements.

--- a/client/styles/home.scss
+++ b/client/styles/home.scss
@@ -12,15 +12,16 @@ html, body {
 }
 nav {
   height: 40px;
-  padding: 8px;
+  padding: 8px 20px;
   border-bottom: 1px solid black;
   background-color: $theme;
 
   #userCount {
     float: right;
-    font-size: 20px;
+    font-size: 1.5em;
     margin-top: -25px;
     display: block;
+    color: #eee;
   }
 }
 nav h1 {
@@ -28,32 +29,39 @@ nav h1 {
 }
 #message-list {
   height: calc(100vh - 131px);
-  padding: 16px 8px;
-}
-#message-list .message {
-  padding: 4px 0;
-  display: flex;
-}
-#message-list .message .username,
-#message-list .message .content {
-  display: inline-block;
-  padding: 4px 0;
-}
-#message-list .message .username {
-  flex: 15;
-  margin-right: 16px;
-  overflow: hidden;
-  font-weight: 700;
-}
-#message-list .message .content {
-  flex: 85;
-}
-#message-list .message.system {
-  font-weight: 400;
-  font-style: italic;
+  padding: 16px 10px;
+  background: #eee;
+  padding-bottom: $footer;
+  overflow: scroll;
+
+  .message {
+      padding: 4px 0;
+      display: flex;
+      margin-left: 7px;
+    .username,
+    .content {
+      display: inline-block;
+      padding: 4px 0;
+    }
+    .username {
+      flex: 15;
+      margin-right: 16px;
+      font-weight: 700;
+    }
+    .content {
+      flex: 85;
+    }
+    .system {
+      font-weight: 400;
+      font-style: italic;
+    }
+  }
 }
 footer {
-  height: 41px;
+  bottom: 0;
+  position: fixed;
+  width: 100%;
+  height: $footer;
   border-top: 1px solid black;
   background-color: $theme;
   display: flex; align-items: center;
