--- a/client/styles/home.scss
+++ b/client/styles/home.scss
@@ -4,8 +4,7 @@ h1 {
 html, body {
   max-height: 100vh;
   max-width: 100vw;
-  font-family: 'Open Sans',
-  sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 .wrapper {
   font-size: 14px;
@@ -19,13 +18,13 @@ nav {
   #userCount {
     float: right;
     font-size: 1.5em;
-    margin-top: -25px;
-    display: block;
+    margin-top: -30px;
     color: #eee;
   }
 }
 nav h1 {
-  margin: 0;
+  margin: 4px;
+  width: 30px;
 }
 #message-list {
   height: calc(100vh - 131px);
@@ -73,8 +72,8 @@ footer input {
   padding: 4px 8px;
 }
 footer #username {
-  flex: 3;
+  flex: 2;
 }
 footer #new-message {
-  flex: 7;
+  flex: 8;
 }
