--- a/client/styles/home.scss
+++ b/client/styles/home.scss
@@ -1,10 +1,8 @@
-h1 {
-  color: #eee;
-}
 html, body {
   max-height: 100vh;
   max-width: 100vw;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Muli', sans-serif;
+  // background-color: #eee;
 }
 .wrapper {
   font-size: 14px;
@@ -12,24 +10,25 @@ html, body {
 nav {
   height: 40px;
   padding: 8px 20px;
-  border-bottom: 1px solid black;
   background-color: $theme;
+  box-shadow: 5px 1px 5px #888888;
 
+  #brand {
+    font-size: 200%;
+    margin: 5px 0px;
+    width: 30px;
+    color: #eee;
+  }
   #userCount {
     float: right;
     font-size: 1.5em;
-    margin-top: -30px;
+    margin-top: -33px;
     color: #eee;
   }
-}
-nav h1 {
-  margin: 4px;
-  width: 30px;
 }
 #message-list {
   height: calc(100vh - 131px);
   padding: 16px 10px;
-  background: #eee;
   padding-bottom: $footer;
   overflow: scroll;
 
@@ -61,19 +60,23 @@ footer {
   position: fixed;
   width: 100%;
   height: $footer;
-  border-top: 1px solid black;
+  border-top: 0px solid #888;
   background-color: $theme;
+  padding-right: 10px;
   display: flex; align-items: center;
 }
 footer input {
-  border: 1px solid black;
+  border-radius: 1px;
+  border: none;
   margin: 4px;
   height: 20px;
   padding: 4px 8px;
+  color: #525252;
+  box-shadow: 1px 1px 1px black;
 }
 footer #username {
-  flex: 2;
+  flex: 3;
 }
 footer #new-message {
-  flex: 8;
+  flex: 7;
 }
